CORE-14632: Update flow driver tests. (#73)