@@ -17,13 +17,15 @@ import org.junit.jupiter.api.extension.RegisterExtension;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
-public class ChatFlowDriverTests {
+class ChatFlowDriverTests {
     /**
      * Step 1.
      * Declare member identities needed for the tests
@@ -34,7 +36,6 @@ public class ChatFlowDriverTests {
     private static final MemberX500Name alice = MemberX500Name.parse("CN=Alice, OU=Application, O=R3, L=London, C=GB");
     private static final MemberX500Name bob = MemberX500Name.parse("CN=Bob, OU=Application, O=R3, L=London, C=GB");
     private static final MemberX500Name notary = MemberX500Name.parse("CN=Notary, OU=Application, O=R3, L=London, C=GB");
-    private static final Map<MemberX500Name, VirtualNodeInfo> vNodes = new HashMap<>();
     private static final ObjectMapper jsonMapper;
 
     static {
@@ -45,8 +46,10 @@ public class ChatFlowDriverTests {
         jsonMapper.registerModule(module);
     }
 
-    private String startOfTransactionId = "SHA-256D:";
-    private JavaType chatMessageListType = jsonMapper.getTypeFactory().constructCollectionType(List.class, ChatStateResults.class);
+    private static final String startOfTransactionId = "SHA-256D:";
+    private static final JavaType chatMessageListType = jsonMapper.getTypeFactory().constructCollectionType(List.class, ChatStateResults.class);
+
+    private Map<MemberX500Name, VirtualNodeInfo> vNodes;
 
     /**
      * Step 2.
@@ -55,6 +58,7 @@ public class ChatFlowDriverTests {
      * Or an [AllTestsDriver] which will only be created once, and reused for all tests. Use this when tests can co-exist as the tests will run faster.
      */
 
+    @SuppressWarnings("JUnitMalformedDeclaration")
     @RegisterExtension
     private final AllTestsDriver driver = new DriverNodes(alice, bob).withNotary(notary, 1).forAllTests();
 
@@ -65,14 +69,12 @@ public class ChatFlowDriverTests {
 
     @BeforeAll
     void setup() {
-        Set<MemberX500Name> nodes = new HashSet<>(Arrays.asList(alice, bob));
-        driver.run(
-                dsl -> dsl.startNodes(nodes)
-                        .stream().filter(it -> it.getCpiIdentifier().getName().equals("workflows"))
-                        .forEach(it -> vNodes.put(it.getHoldingIdentity().getX500Name(), it))
-        );
+        vNodes = driver.let(dsl -> {
+            dsl.startNodes(Set.of(alice, bob));
+            return dsl.nodesFor("workflows");
+        });
 
-        if (vNodes.isEmpty()) fail("Failed to populate vNodes");
+        assertThat(vNodes).withFailMessage("Failed to populate vNodes").isNotEmpty();
     }
 
     /**
@@ -83,9 +85,9 @@ public class ChatFlowDriverTests {
 
     @Test
     void test_that_CreateNewChatFlow_returns_correct_message() {
-        CreateNewChatFlowArgs chatFlowArgs = new CreateNewChatFlowArgs("myChatName", "Hello Bob, from Alice", bob.toString());
-        String result = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), CreateNewChatFlow.class, () -> jsonMapper.writeValueAsString(chatFlowArgs))
+        final CreateNewChatFlowArgs chatFlowArgs = new CreateNewChatFlowArgs("myChatName", "Hello Bob, from Alice", bob.toString());
+        final String result = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), CreateNewChatFlow.class, () -> jsonMapper.writeValueAsString(chatFlowArgs))
         );
         assertThat(result).contains(startOfTransactionId);
     }
@@ -93,21 +95,21 @@ public class ChatFlowDriverTests {
     @Test
     void test_that_listChatsFlow_returns_correct_values() throws JsonProcessingException {
         // Get the current count before we start
-        String listOfChatMessagesResult1 = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
+        final String listOfChatMessagesResult1 = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
         );
         List<ChatStateResults> listOfChatMessages1 = jsonMapper.readValue(listOfChatMessagesResult1, chatMessageListType);
-        Integer sizeBeforeSendingMessage = listOfChatMessages1.size();
+        int sizeBeforeSendingMessage = listOfChatMessages1.size();
 
         // Send a new message, so there is another chat in list of chats
         test_that_CreateNewChatFlow_returns_correct_message();
 
         // Get the latest count, and assert it has increased
-        String listOfChatMessagesResult2 = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
+        final String listOfChatMessagesResult2 = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
         );
         List<ChatStateResults> listAfterSendingMessage = jsonMapper.readValue(listOfChatMessagesResult2, chatMessageListType);
-        Integer sizeAfterSendingMessage = listAfterSendingMessage.size();
+        final int sizeAfterSendingMessage = listAfterSendingMessage.size();
         assertThat(sizeAfterSendingMessage).isGreaterThan(sizeBeforeSendingMessage);
 
         // Assert the response contains all the values
@@ -121,27 +123,27 @@ public class ChatFlowDriverTests {
         test_that_CreateNewChatFlow_returns_correct_message();
 
         // List the messages and retrieve the id
-        String listMessagesResult = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
+        final String listMessagesResult = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
         );
         List<ChatStateResults> messageList = jsonMapper.readValue(listMessagesResult, chatMessageListType);
-        UUID firstMessageId = messageList.get(messageList.size() - 1).getId();
+        final UUID firstMessageId = messageList.get(messageList.size() - 1).getId();
 
         // Update the message
-        String expectedMessage = "Updated message";
+        final String expectedMessage = "Updated message";
         UpdateChatFlowArgs updateChatFlowArgs = new UpdateChatFlowArgs(firstMessageId, expectedMessage);
-        String updateMessageResult = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(updateChatFlowArgs))
+        final String updateMessageResult = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(updateChatFlowArgs))
         );
         assertThat(updateMessageResult).contains(startOfTransactionId);
 
         // List the message and validate updated message is present
-        String listUpdatedMessagesResult = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
+        final String listUpdatedMessagesResult = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
         );
         logger.info("listUpdatedMessagesResult {}", listUpdatedMessagesResult);
         List<ChatStateResults> updatedMessageList = jsonMapper.readValue(listUpdatedMessagesResult, chatMessageListType);
-        String updatedMessageValue = updatedMessageList.stream()
+        final String updatedMessageValue = updatedMessageList.stream()
                 .filter(it -> it.getId().equals(firstMessageId))
                 .toList().get(0)
                 .getMessage();
@@ -154,65 +156,65 @@ public class ChatFlowDriverTests {
         test_that_CreateNewChatFlow_returns_correct_message();
 
         // List the messages and retrieve the id
-        String listMessagesResult = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
+        final String listMessagesResult = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), ListChatsFlow.class, () -> "")
         );
         List<ChatStateResults> messageList = jsonMapper.readValue(listMessagesResult, chatMessageListType);
         UUID firstMessageId = messageList.get(messageList.size() - 1).getId();
 
         // Get the latest message
         GetChatFlowArgs getChatFlowArgs = new GetChatFlowArgs(firstMessageId, 1);
-        String gatheredMessageResult1 = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
+        final String gatheredMessageResult1 = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
         );
         JavaType messageAndSenderListType = jsonMapper.getTypeFactory().constructCollectionType(List.class, MessageAndSender.class);
         List<MessageAndSender> listOfMessages1 = jsonMapper.readValue(gatheredMessageResult1, messageAndSenderListType);
-        assertThat(listOfMessages1.size()).isEqualTo(1);
+        assertThat(listOfMessages1).hasSize(1);
         MessageAndSender message1Values = listOfMessages1.get(0);
         assertThat(message1Values.getMessageFrom()).isEqualTo(alice.toString());
 
         // Alice sends an updated message to Bob
-        String secondMessageExpectedValue = "Hello Bob, It's Alice again";
+        final String secondMessageExpectedValue = "Hello Bob, It's Alice again";
         UpdateChatFlowArgs aliceUpdatedMessageArgs = new UpdateChatFlowArgs(firstMessageId, secondMessageExpectedValue);
         driver.run(dsl ->
-                dsl.runFlow(vNodes.get(alice), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(aliceUpdatedMessageArgs))
+            dsl.runFlow(vNodes.get(alice), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(aliceUpdatedMessageArgs))
         );
 
         // Get the latest message and assert the message content is updated value
-        String gatheredMessageResult2 = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
+        final String gatheredMessageResult2 = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
         );
         List<MessageAndSender> listOfMessages2 = jsonMapper.readValue(gatheredMessageResult2, messageAndSenderListType);
-        assertThat(listOfMessages2.size()).isEqualTo(1);
+        assertThat(listOfMessages2).hasSize(1);
         MessageAndSender message2Values = listOfMessages2.get(0);
         assertThat(message2Values.getMessageFrom()).isEqualTo(alice.toString());
         assertThat(message2Values.getMessage()).isEqualTo(secondMessageExpectedValue);
 
         // Bob sends an update message to Alice
-        String thirdMessageExpectedValue = "Hello Alice, I've been busy. Bob";
+        final String thirdMessageExpectedValue = "Hello Alice, I've been busy. Bob";
         UpdateChatFlowArgs bobUpdatedMessageArgs = new UpdateChatFlowArgs(firstMessageId, thirdMessageExpectedValue);
         driver.run(dsl ->
-                dsl.runFlow(vNodes.get(bob), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(bobUpdatedMessageArgs))
+            dsl.runFlow(vNodes.get(bob), UpdateChatFlow.class, () -> jsonMapper.writeValueAsString(bobUpdatedMessageArgs))
         );
 
         // Get the latest message and assert the message content is updated value
-        String gatheredMessageResult3 = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
+        final String gatheredMessageResult3 = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getChatFlowArgs))
         );
         List<MessageAndSender> listOfMessages3 = jsonMapper.readValue(gatheredMessageResult3, messageAndSenderListType);
-        assertThat(listOfMessages3.size()).isEqualTo(1);
+        assertThat(listOfMessages3).hasSize(1);
         MessageAndSender message3Values = listOfMessages3.get(0);
         assertThat(message3Values.getMessageFrom()).isEqualTo(bob.toString());
         assertThat(message3Values.getMessage()).isEqualTo(thirdMessageExpectedValue);
 
         // Get full back-chain
         GetChatFlowArgs getFullChatFlowArgs = new GetChatFlowArgs(firstMessageId, 9999);
-        String gatheredAllMessagesResult = driver.let(dsl ->
-                dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getFullChatFlowArgs))
+        final String gatheredAllMessagesResult = driver.let(dsl ->
+            dsl.runFlow(vNodes.get(alice), GetChatFlow.class, () -> jsonMapper.writeValueAsString(getFullChatFlowArgs))
         );
 
         logger.info("gatheredAllMessagesResult : {}", gatheredAllMessagesResult);
         List<MessageAndSender> listOfAllMessages = jsonMapper.readValue(gatheredAllMessagesResult, messageAndSenderListType);
-        assertThat(listOfAllMessages.size()).isEqualTo(3);
+        assertThat(listOfAllMessages).hasSize(3);
     }
 }
